--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,7 @@
 
 @layer components {
   .container {
-    @apply lg:!min-w-[87.84773060029283rem] lg:!w-[87.84773060029283rem] xl:!min-w-[1200px] xl:!w-[1200px] md:min-w-[94%] md:w-[94%] min-w-[96%] w-[96%] mx-auto;
+    @apply lg:!min-w-[87.84773060029283rem] lg:!w-[87.84773060029283rem] md:min-w-[94%] md:w-[94%] min-w-[96%] w-[96%] mx-auto;
   }
 }
 
